--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nextjs-toploader": "^3.8.16",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.5.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
@@ -55,6 +56,7 @@
     "@types/lodash": "^4.17.17",
     "@types/node": "^20.19.8",
     "@types/react": "^19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
