--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "focus-trap-react": "^11.0.4",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -42,6 +42,7 @@
     "react-datepicker": "^8.5.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
     "sonner": "^2.0.4",
